# carla-sim-ros2

./: .gitignore  Dockerfile  README.md  autostart.sh  config.sh
carla_pkgs_ros2/carla_bringup/: CMakeLists.txt  README.md  package.xml
carla_pkgs_ros2/carla_bringup/config/: objects.json
carla_pkgs_ros2/carla_bringup/launch/: bringup.launch.py  carla_ros_bridge_with_example_ego_vehicle.launch.py
carla_pkgs_ros2/carla_bringup/rviz/: carla_rviz2.rviz
carla_pkgs_ros2/carla_rviz2/: CMakeLists.txt  README.md  package.xml
carla_pkgs_ros2/carla_rviz2/launch/: rviz2.launch.py
carla_pkgs_ros2/carla_rviz2/rviz/: carla_rviz2.rviz
scripts/: build.sh  run_docker.sh  run_nvidia.sh
